WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278526
HTMLMediaElement watchtime logging is using incorrect message identifiers
https://bugs.webkit.org/show_bug.cgi?id=278526
Summary
HTMLMediaElement watchtime logging is using incorrect message identifiers
Jer Noble
Reported
2024-08-22 09:06:03 PDT
HTMLMediaElement watchtime logging is using incorrect message identifiers
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-22 09:07:36 PDT
<
rdar://problem/134503892
>
Jer Noble
Comment 2
2024-08-22 09:10:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32593
EWS
Comment 3
2024-08-22 10:23:08 PDT
Committed
282622@main
(524bcdc17a01): <
https://commits.webkit.org/282622@main
> Reviewed commits have been landed. Closing PR #32593 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug