HTMLMediaElement watchtime logging is using incorrect message identifiers https://bugs.webkit.org/show_bug.cgi?id=278526 rdar://134503892

Reviewed by Eric Carlson.

Each of the three logging events were using the same message identifier; the video codec
and audio codec events should use distict identifiers from the sourceType event.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::watchtimeTimerFired):

Canonical link: https://commits.webkit.org/282622@main